Added menu and fake server for player mode

--- a/PaCE Man Client/nbproject/project.properties
+++ b/PaCE Man Client/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PaCE_Man_Client
-main.class=app.PaCEManClient
+main.class=app.PlayerWindow
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
