--- a/PaCE Man Server/CMakeLists.txt
+++ b/PaCE Man Server/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PaCE_Man_Server C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(PaCE_Man_Server main.c Server.c Server.h)
+add_executable(PaCE_Man_Server main.c Server.c Server.h Logic.c Logic.h)
